tests/snapshots/run_wpt_conformance__litert_reduceSumSquare_float16_1D_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum_square.https.any.js reduceSumSquare float16 1D tensor all positive default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceSumSquare { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumSquareInput: f16[24];
  }

  nodes {
    [reduceSumSquareOutput] = reduceSumSquare(reduceSumSquareInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumSquareOutput; }
}
