tests/snapshots/run_wpt_conformance__litert_reduceSumSquare_float16_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum_square.https.any.js reduceSumSquare float16 4D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceSumSquare { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumSquareInput: f16[2, 2, 2, 3];
  }

  nodes {
    [reduceSumSquareOutput] = reduceSumSquare(reduceSumSquareInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumSquareOutput; }
}
